[package]
name = "orchard"
version = "0.0.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2018"
description = "Sapling on stilts!"
license = "TGPPL"
repository = "https://github.com/zcash/orchard"
documentation = "https://docs.rs/orchard"
readme = "README.md"

# We can't publish to crates.io under TGPPL yet.
publish = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
aes = "0.6"
bitvec = "0.22"
blake2b_simd = "0.5"
ff = { git = "https://github.com/nuttycom/ff", branch = "bitvec-0.22" }
fpe = "0.4"
group = { git = "https://github.com/nuttycom/group", branch = "bitvec-0.22" }
nonempty = "0.6"
subtle = "2.3"

[dependencies.halo2]
git = "https://github.com/nuttycom/halo2.git"
branch = "bitvec-0.22"

[dependencies.pasta_curves]
git = "https://github.com/nuttycom/pasta_curves.git"
branch = "bitvec-0.22"

[dependencies.reddsa]
git = "https://github.com/nuttycom/redjubjub.git"
branch = "bitvec-0.22"

[dev-dependencies]
criterion = "0.3"
hex = "0.4"

[lib]
bench = false

[[bench]]
name = "small"
harness = false
